almost ready extension

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,31 @@
 {
-  "manifest_version": 2,
-  "name": "Pomodoro_timer",
-  "version": "1.0",
+    "manifest_version": 2,
+    "name": "Pomodoro_timer",
+    "version": "1.0",
 
-  "description": "Add a pomodoro timer to the browser.",
+    "description": "Add a pomodoro timer to the browser.",
 
-  "icons": {
-    "48": "icons/pomodoro-48.png"
-  },
-  "browser_action": {
-    "default_icon": "icons/pomodoro-32.png",
-    "default_title": "Pomodoro Timer",
-    "default_popup": "popup/pomodoro_timer.html"
-  },
-  "permissions": [
-    "alarms"
-  ]
-,
+    "icons": {
+        "48": "icons/pomodoro-48.png"
+    },
+    "browser_action": {
+        "default_icon": "icons/pomodoro-32.png",
+        "default_title": "Pomodoro Timer",
+        "default_popup": "popup/pomodoro_timer.html"
+    },
+    "permissions": ["notifications", "storage"],
     "background": {
-        "scripts": ["/popup/background.js"]
+        "scripts": ["/background/background.js"],
+        "persistent": true
+    },
+    "options_ui": {
+        "page": "options/options.html",
+        "open_in_tab": true
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "pomodoro_timer@pomodoro_timer.com",
+            "strict_min_version": "42.0"
+        }
     }
 }
