--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "watch:dev": "node ./src/buildScript.mjs"
     },
     "dependencies": {
+        "purecss": "^3.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "typescript": "^5.2.2"
@@ -13,7 +14,6 @@
         "@babel/plugin-transform-destructuring": "^7.22.10",
         "@babel/preset-env": "^7.22.14",
         "@babel/preset-react": "^7.22.5",
-        "esbuild": "^0.19.2",
-        "esbuild-plugin-babel": "^0.2.3"
+        "esbuild": "^0.19.2"
     }
 }
